# Basic_CPP_Project_Template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README2.MD  vcpkg.json
src/: main.cpp
tests/: CMakeLists.txt  test_example.cpp
